--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "datalist",
     "lookahead"
   ],
-  "main": "dist/react-input-completion.js",
+  "main": "react-input-completion.js",
   "scripts": {
-    "prepublish": "webpack",
+    "prepublish": "babel src/input-completion.jsx --out-file react-input-completion.js",
     "start": "webpack-dev-server --content-base src/ --port 3000 --hot --inline",
     "test": "karma start test/karma.conf.js"
   },
   "author": "Ian McNally <ianmcnally@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^5.8.21",
     "babel-loader": "^5.3.2",
-    "babelify": "^6.1.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.3",
     "karma-babel-preprocessor": "^5.2.1",
