--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "author": "Ian McNally <ianmcnally@gmail.com>",
   "license": "ISC",
+  "peerDependencies": {
+    "react": "^0.13.3"
+  },
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-loader": "^5.3.2",
@@ -30,7 +33,7 @@
     "karma-sinon-chai": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "phantomjs": "^1.9.17",
-    "react": "^0.13.3",
-    "webpack": "^1.11.0"
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   }
 }
