--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "prepublish": "babel src/input-completion.jsx --out-file react-input-completion.js && cp src/input-completion.css ./react-input-completion.css",
     "start": "webpack-dev-server --content-base demo/ --port 3000 --hot --inline",
-    "test": "karma start test/karma.conf.js"
+    "test": "karma start test/karma.conf.js",
+    "lint": "eslint test src --ignore-pattern node_modules"
   },
   "author": "Ian McNally <ianmcnally@gmail.com>",
   "license": "ISC",
@@ -25,6 +26,8 @@
     "babel": "^5.8.21",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.16.0",
+    "eslint": "^1.2.1",
+    "eslint-plugin-react": "^3.2.3",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.3",
     "karma-babel-preprocessor": "^5.2.1",
