--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,6 @@
         "prefer-const": 2,
         "prefer-spread": 2,
         "prefer-reflect": 2,
-        "arrow-spacing": 2,
         "no-console": 2,
         "no-constant-condition": 2,
         "no-debugger": 2,
@@ -41,7 +40,6 @@
         "no-empty": 2,
         "no-ex-assign": 2,
         "no-extra-boolean-cast": 2,
-        "no-extra-parens": 2,
         "no-extra-semi": 2,
         "no-func-assign": 2,
         "no-inner-declarations": 2,
@@ -87,7 +85,12 @@
         "no-with": 2,
         "vars-on-top": 2,
         "wrap-iife": 2,
-        "yoda": [2, "never"]
+        "yoda": [2, "never"],
+        "no-undef": 2,
+        "no-delete-var": 2,
+        "no-unused-vars": 2,
+        "arrow-parens": [2, "always"],
+        "arrow-spacing": 2
     },
     "env": {
         "es6": true,
