--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepublish": "babel src/input-completion.jsx --out-file react-input-completion.js && cp src/input-completion.css ./react-input-completion.css",
     "start": "webpack-dev-server --content-base demo/ --port 3000 --hot --inline",
     "test": "karma start test/karma.conf.js",
-    "lint": "eslint test src --ignore-pattern node_modules"
+    "lint": "eslint test src --ignore-pattern node_modules && jscs src test"
   },
   "author": "Ian McNally <ianmcnally@gmail.com>",
   "license": "ISC",
@@ -28,7 +28,9 @@
     "css-loader": "^0.16.0",
     "eslint": "^1.2.1",
     "eslint-plugin-react": "^3.2.3",
+    "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "jasmine-core": "^2.3.4",
+    "jscs": "^2.1.0",
     "karma": "^0.13.3",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-mocha": "^0.2.0",
