--- a/.jscsrc
+++ b/.jscsrc
@@ -14,30 +14,9 @@
   "disallowQuotedKeysInObjects": true,
   "disallowSemicolons": true,
   "disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "+", "-", "~", "!"],
-  "disallowSpacesInAnonymousFunctionExpression": {
-    "beforeOpeningRoundBrace": true,
-    "beforeOpeningCurlyBrace": true
-  },
   "disallowSpacesInCallExpression": true,
-  "disallowSpacesInFunctionDeclaration": {
-    "beforeOpeningRoundBrace": true,
-    "beforeOpeningCurlyBrace": true
-  },
-  "disallowSpacesInFunctionExpression": {
-    "beforeOpeningRoundBrace": true,
-    "beforeOpeningCurlyBrace": true
-  },
-  "disallowSpacesInFunction": {
-      "beforeOpeningRoundBrace": true,
-      "beforeOpeningCurlyBrace": true
-  },
-  "disallowSpacesInNamedFunctionExpression": {
-      "beforeOpeningRoundBrace": true,
-      "beforeOpeningCurlyBrace": true
-  },
   "disallowSpacesInsideArrayBrackets": "all",
   "disallowSpacesInsideBrackets": true,
-  "disallowSpacesInsideObjectBrackets": "all",
   "disallowSpacesInsideParentheses": true,
   "requireBlocksOnNewline": 1,
   "requireCamelCaseOrUpperCaseIdentifiers": true,
@@ -120,6 +99,22 @@
     "while",
     "catch"
   ],
+  "requireSpacesInFunctionDeclaration": {
+    "beforeOpeningRoundBrace": true,
+    "beforeOpeningCurlyBrace": true
+  },
+  "requireSpacesInFunctionExpression": {
+    "beforeOpeningRoundBrace": true,
+    "beforeOpeningCurlyBrace": true
+  },
+  "requireSpacesInFunction": {
+      "beforeOpeningRoundBrace": true,
+      "beforeOpeningCurlyBrace": true
+  },
+  "requireSpacesInNamedFunctionExpression": {
+      "beforeOpeningRoundBrace": true,
+      "beforeOpeningCurlyBrace": true
+  },
   "requireSpaceBeforeObjectValues": true,
   "requireSpaceBetweenArguments": true,
   "requireSpacesInConditionalExpression": {
@@ -128,7 +123,14 @@
     "afterConsequent": true,
     "beforeAlternate": true
   },
+  "requireSpacesInAnonymousFunctionExpression": {
+    "beforeOpeningRoundBrace": true,
+    "beforeOpeningCurlyBrace": true
+  },
+  "requireSpacesInsideObjectBrackets": "all",
   "requireSpacesInForStatement": true,
   "maximumLineLength": 120,
-  "esprima": "./node_modules/esprima-fb"
+  "esnext": true,
+  "fileExtensions": [".js", ".jsx"],
+  "excludeFiles": ["node_modules/**"]
 }
