--- a/package.json
+++ b/package.json
@@ -20,21 +20,24 @@
   },
   "author": "Ian McNally <ianmcnally@gmail.com>",
   "license": "ISC",
-  "peerDependencies": {
+  "dependencies": {
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
   },
   "devDependencies": {
-    "babel": "^5.8.21",
+    "babel-cli": "^6.1.18",
+    "babel-core": "^6.1.21",
     "babel-jscs": "^2.0.4",
-    "babel-loader": "^5.3.2",
+    "babel-loader": "^6.1.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "css-loader": "^0.16.0",
+    "es5-shim": "^4.3.1",
     "eslint": "^1.2.1",
     "eslint-plugin-react": "^3.2.3",
     "jasmine-core": "^2.3.4",
     "jscs": "^2.1.0",
     "karma": "^0.13.3",
-    "karma-babel-preprocessor": "^5.2.1",
     "karma-mocha": "^0.2.0",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "^0.2.0",
